project(core CXX)

add_library(${PROJECT_NAME} STATIC)
add_library(${CMAKE_PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})

target_sources(
  ${PROJECT_NAME}
  PRIVATE
    core.cpp
)

target_include_directories(
  ${PROJECT_NAME}
  PUBLIC
    "$<INSTALL_INTERFACE:include/${CMAKE_PROJECT_NAME}/${PROJECT_NAME}>"
    "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>"
  PRIVATE
    "${CMAKE_CURRENT_SOURCE_DIR}" 
)

set(
  PUBLIC_HEADERS
    core.hpp
)

set_target_properties(
  ${PROJECT_NAME} 
  PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    PUBLIC_HEADER "${PUBLIC_HEADERS}"
)

install(
  TARGETS 
    ${PROJECT_NAME} 
  LIBRARY 
    DESTINATION "${CMAKE_INSTALL_PREFIX}/lib"
  PUBLIC_HEADER 
    DESTINATION "${CMAKE_INSTALL_PREFIX}/include/${CMAKE_PROJECT_NAME}/${PROJECT_NAME}"
)